--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,6 @@
 {
   "author": "Emanuele Triuzzi",
+  "description": "Add keyboard shortcuts to duplicate and pin tabs. No internet access needed. github.com/triuzzi/tab-shortcuts",
   "name": "Tab Shortcuts",
   "version": "1.0",
 
@@ -21,5 +22,12 @@
       },
       "description": "Pin active tab"
     }
+  },
+
+  "icons": {
+    "16": "icons/16.png",
+    "32": "icons/32.png",
+    "48": "icons/48.png",
+    "128": "icons/128.png"
   }
 }
